# tauri-todo

./: README.md  index.html  package.json  vite.config.ts
src/: App.tsx  layout.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  prelude.rs  todos.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml  db.sqlite
src-tauri/migration/src/: lib.rs  m20240515_064001_todos.rs
src-tauri/src/: error.rs  main.rs  menu.rs  setup.rs  utils.rs
src-tauri/src/commands/: todo.rs
src-tauri/src/service/: mod.rs  mutation.rs  query.rs
src/components/: sidebar.tsx  titlebar.tsx  todo-item.tsx
src/pages/: setting.tsx  todo.tsx  web3.tsx
