workspace = { members = ["entity", "migration"] }
[package]
name = "tauri-first"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tauri = { version = "1.6.5", features = [ "system-tray", "macos-private-api", "window-all", "notification-all", "dialog-all", "shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.83"
dotenv = "0.15.0"
chrono = '0.4.38'
tauri-plugin-authenticator = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
